0504 user login hasegawa

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">ブログ</a>
+      <a class="navbar-brand" href="{% url 'blog:index' %}">ブログ</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,16 +20,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'blog:index' %}">Home</a>
+            <a class="nav-link" href="#">***</a>
           </li>
-          {% if user.is_superuser %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+          {% if user.is_authenticated %}
+          <li class="navbar-brand">
+            login: {{ user.get_username }}
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="{% url 'blog:add' %}">ブログの追加</a>
           </li>
-          {% endif %}
+          <li class="nav-item active">
+          </li>
+            {% else %}
+            <li class="nav-item active">
+             <a class="nav-link" href="{% url 'accounts:login' %}">ログイン</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'accounts:signup' %}">サインアップ</a>
+             </li>
+            {% endif %}       
         </ul>
         <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'blog:index' %}">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="keyword">
