--- a/blog/templates/blog/base2.html
+++ b/blog/templates/blog/base2.html
@@ -1,4 +1,5 @@
-<html lang="ja">
+<!DOCTYPE html>
+  <html lang="ja">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">ブログ</a>
+      <a class="navbar-brand" href="{% url 'blog:index' %}">ブログ</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -19,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'blog:index' %}">Home</a>
+            <a class="nav-link" href="{% url 'blog:index' %}">ブログ一覧</a>
           </li>
           {% if user.is_superuser %}
           <li class="nav-item">
