--- a/templates/base4.html
+++ b/templates/base4.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'blog:index' %}">ブログ</a>
+        <a class="navbar-brand" href="#">ブログログイン</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,7 +26,7 @@
                   <a href="{% url 'accounts:signup' %}" class="signup">サインアップ</a>
                 </li>
                 <li class="nav-item">
-                   <a href="{% url 'login' %}" class="login">ログイン</a>
+                   <a href="{% url 'login' %}" class="login">　ログイン</a>
                 </li>
                 {% endif %}
                 {% if user %}
