--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -22,5 +22,10 @@
       <a href="{% url 'blog:delete' post.pk %}" class="btn btn-primary">削除</a>
     </div>
     {% endif %}
+    <article class="comment-area">
+      <a class="btn btn-primary my-3" href="{% url 'blog:comment_form' post.pk %}">コメントを投稿する</a>
+      {% include "blog/snippets/comments.html" %}
+    </article>
+  </main>
 </div>
 {% endblock %}
