--- a/templates/base4.html
+++ b/templates/base4.html
@@ -9,8 +9,8 @@
     <title>{% if request.path != '/' %}{% block title %}{% endblock %} | {% endif %}ブログ認証</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">ブログログイン</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">ログイン画面</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -18,22 +18,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
-                <li class="nav-item active">
-                    <a href="{% url 'logout' %}" class="logout">Logout</a>
+                <li class="nav-item active ml-3">
+                    <a href="{% url 'logout' %}" class="logout">ログアウト</a>
+                <li class="nav-item ml-3"> login: {{ user.get_username }}
+                </li>
                 </li>
                 {% else %}
-                <li class="nav-item active">
+                <li class="nav-item active ml-3">
                   <a href="{% url 'accounts:signup' %}" class="signup">サインアップ</a>
                 </li>
-                <li class="nav-item">
-                   <a href="{% url 'login' %}" class="login">　ログイン</a>
+                <li class="nav-item ml-3 mr-3">
+                   <a href="{% url 'login' %}" class="login">ログイン</a>
                 </li>
                 {% endif %}
-                {% if user %}
-                <li class="nav-item"> login: {{ user.get_username }}
-                </li>
-                {% endif %}
-            </ul>
+          </ul>
         </nav>
     </header>
     <div class="content">
