--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,4 +1,4 @@
-{% block title %}ブログ{% endblock %}
+<a href="{% url 'blog:index' %}">{% block title %}ブログ{% endblock %}</a>
 
 {% block content %}
 <h1>ログアウトしました</h1>
