--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,8 +14,18 @@
       </div>
       <p>{{ post.created_at }}, {{ post.category }}</p>
       {{ post.text | linebreaksbr | urlize }}
-      <p>{{ post.created_user }}</p>
+    <p>{{ post.created_user }}</p>
+</div>
+    <div class="post">
+          <ul>
+              {% if row.is_like == 1 %}
+                  <li><a role="button" aria-pressed="true" onclick="likes(event, '1', '{{ row.id }}')">いいね！<span>({{ row.likes_cnt }})</span></a></li>
+              {% else %}
+                  <li><a role="button" aria-pressed="false" onclick="likes(event, '1', '{{ row.id }}')">いいね！<span>({{ row.likes_cnt }})</span></a></li>
+              {% endif %}
+          </ul>
       </div>
+    <a href="{% url 'blog:like' {{request.user}} {{post.id}} %}">いいね！</a>{{ post.like_num }}
     {% if post.created_user == request.user %}
     <div class="text-right mr-5 mb-2">
       <a href="{% url 'blog:update' post.pk %}" class="btn btn-primary">更新</a>
