--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,10 +7,11 @@
     <meta name="description" content="{% block description %}pythonプログラミング演習用のブログサイトです{% endblock %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
     <title>{% block title %}ブログ{% endblock %}</title>
+    {% load static %}  
      <!-- likes -->
-     <script src="{% static 'blog/js/ajax.js' %}" charset="utf-8"></script>
+     <script src="{% static 'ajax.js' %}" charset="utf-8"></script>
      <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>    
  
   </head>
